--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -13,12 +13,12 @@
 </script>
 <!-- End Google Tag Manager for WordPress by gtm4wp.com -->
 	<!-- This site is optimized with the Yoast SEO plugin v22.1 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>KONTAKT - Jetzt persönlich Beraten lassen - Bremer Wertschließfach AG</title>
+	<title>SCHMALSTIEG Sicherheitsdienste</title>
 	<meta name="description" content="Jetzt in Kontakt treten und zu Ihrem Wertschließfach beraten lassen. Das Team der BWSAG hilft Ihnen bei jederart Anfrage gerne weiter." />
 	<link rel="canonical" href="kontakt/" />
 	<meta property="og:locale" content="de_DE" />
 	<meta property="og:type" content="article" />
-	<meta property="og:title" content="KONTAKT - Jetzt persönlich Beraten lassen - Bremer Wertschließfach AG" />
+	<meta property="og:title" content="SCHMALSTIEG Sicherheitsdienste" />
 	<meta property="og:description" content="Jetzt in Kontakt treten und zu Ihrem Wertschließfach beraten lassen. Das Team der BWSAG hilft Ihnen bei jederart Anfrage gerne weiter." />
 	<meta property="og:url" content="kontakt/" />
 	<meta property="og:site_name" content="Bremer Wertschließfach AG" />
