--- a/preise/index.html
+++ b/preise/index.html
@@ -13,12 +13,12 @@
 </script>
 <!-- End Google Tag Manager for WordPress by gtm4wp.com -->
 	<!-- This site is optimized with the Yoast SEO plugin v22.1 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>PREISE &amp; GRÖßEN - Bremer Wertschließfach AG</title>
+	<title>SCHMALSTIEG Sicherheitsdienste</title>
 	<meta name="description" content="Was kostet ein Wertschließfach und welche Größen gibt es? Hier finden Sie das passende Wertschließfach und alles zu Thema Kunstverwahrung." />
 	<link rel="canonical" href="preise/" />
 	<meta property="og:locale" content="de_DE" />
 	<meta property="og:type" content="article" />
-	<meta property="og:title" content="PREISE &amp; GRÖßEN - Bremer Wertschließfach AG" />
+	<meta property="og:title" content="SCHMALSTIEG Sicherheitsdienste" />
 	<meta property="og:description" content="Was kostet ein Wertschließfach und welche Größen gibt es? Hier finden Sie das passende Wertschließfach und alles zu Thema Kunstverwahrung." />
 	<meta property="og:url" content="preise/" />
 	<meta property="og:site_name" content="Bremer Wertschließfach AG" />
