--- a/sicherheit/index.html
+++ b/sicherheit/index.html
@@ -13,12 +13,12 @@
 </script>
 <!-- End Google Tag Manager for WordPress by gtm4wp.com -->
 	<!-- This site is optimized with the Yoast SEO plugin v22.1 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Alles Sicher ? Mit Sicherheit ! - Bremer Wertschließfach AG</title>
+	<title>SCHMALSTIEG Sicherheitsdienste</title>
 	<meta name="description" content="Finden Sie alles zum Thema Sicherheit unserer Wertschließfach Anlage. Wir bieten Ihnen die höchst mögliche Sicherheitsstufe inkl. Versicherung" />
 	<link rel="canonical" href="sicherheit/" />
 	<meta property="og:locale" content="de_DE" />
 	<meta property="og:type" content="article" />
-	<meta property="og:title" content="Alles Sicher ? Mit Sicherheit ! - Bremer Wertschließfach AG" />
+	<meta property="og:title" content="SCHMALSTIEG Sicherheitsdienste" />
 	<meta property="og:description" content="Finden Sie alles zum Thema Sicherheit unserer Wertschließfach Anlage. Wir bieten Ihnen die höchst mögliche Sicherheitsstufe inkl. Versicherung" />
 	<meta property="og:url" content="sicherheit/" />
 	<meta property="og:site_name" content="Bremer Wertschließfach AG" />
