--- a/vorteile/index.html
+++ b/vorteile/index.html
@@ -13,12 +13,12 @@
 </script>
 <!-- End Google Tag Manager for WordPress by gtm4wp.com -->
 	<!-- This site is optimized with the Yoast SEO plugin v22.1 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Vorteile eines Wertschließfachs - Bremer Wertschließfach AG</title>
+	<title>SCHMALSTIEG Sicherheitsdienste</title>
 	<meta name="description" content="Was unterscheidet und von einer Bank und welche Vorteile bieten wir Ihnen. Erfahren Sie alles zu Ihrem neuen Wertschließfach bei der BWSAG." />
 	<link rel="canonical" href="vorteile/" />
 	<meta property="og:locale" content="de_DE" />
 	<meta property="og:type" content="article" />
-	<meta property="og:title" content="Vorteile eines Wertschließfachs - Bremer Wertschließfach AG" />
+	<meta property="og:title" content="SCHMALSTIEG Sicherheitsdienste" />
 	<meta property="og:description" content="Was unterscheidet und von einer Bank und welche Vorteile bieten wir Ihnen. Erfahren Sie alles zu Ihrem neuen Wertschließfach bei der BWSAG." />
 	<meta property="og:url" content="vorteile/" />
 	<meta property="og:site_name" content="Bremer Wertschließfach AG" />
